added metasafe-eth npm package and use it instead

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "boostrap": "^2.0.0",
     "chart.js": "^2.9.3",
     "ethers": "^4.0.40",
+    "metasafe-eth": "^1.0.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
